--- a/Database/AdminControlForm/AdminControlForm/AdminForm.resx
+++ b/Database/AdminControlForm/AdminControlForm/AdminForm.resx
@@ -120,7 +120,6 @@
   <metadata name="createUserTab.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-<<<<<<< HEAD
   <metadata name="userStatsBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>482, 17</value>
   </metadata>
@@ -134,7 +133,7 @@
     <value>17, 17</value>
   </metadata>
   <metadata name="userStatsTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-=======
+  </metadata>
   <metadata name="powerupsBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>830, 17</value>
   </metadata>
@@ -160,7 +159,6 @@
     <value>656, 17</value>
   </metadata>
   <metadata name="powerupsTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
->>>>>>> f66978d669a8eea7e2107fda1abda67dd6e7c993
     <value>17, 56</value>
   </metadata>
 </root>
